--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -8,7 +8,8 @@ $gray-800: #343a40;
 
 // Override Bootstrap color system
 
-$orange: #bd5d38;
+// $orange: #bd5d38;
+$orange: #FD8D30;
 
 // Override Bootstrap default state colors
 
