--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -8,8 +8,7 @@ $gray-800: #343a40;
 
 // Override Bootstrap color system
 
-// $orange: #bd5d38;
-$orange: #FD8D30;
+$orange: #bd5d38;
 
 // Override Bootstrap default state colors
 
